<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
app:cardCornerRadius="6dp"
app:cardElevation="3dp"
android:layout_marginBottom="3dp"
app:cardUseCompatPadding="true">

<LinearLayout
    android:id="@+id/ll_trip_details_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorLightOrange"
    android:padding="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <LinearLayout
        android:id="@+id/ll_date_time_trip_details_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date_trip_details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_text"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time_trip_details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/time_text"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_username_seats_trip_details_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_username_trip_details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/input_text_username"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_title_seats_trip_details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="end"
            android:text="@string/seats"
            android:textStyle="bold|italic"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_seats_trip_details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/number"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_from_arrow_to_trip_details_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/tv_from_trip_details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/from_text"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tv_arrow_trip_details_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="20dp"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_forward_24" />

        <TextView
            android:id="@+id/tv_to_trip_details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/to_text"
            android:textSize="25dp" />

    </LinearLayout>


</LinearLayout>

</androidx.cardview.widget.CardView>