<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TripActivity">

    <com.example.andproject.utils.MSPTextViewBold
        android:id="@+id/tv_title_trip_details_trip_activity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/trip_details"
        android:background="@drawable/bottom_top"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_trip_details_trip_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="25dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_trip_details_trip_activity"
        android:orientation="vertical"
        android:background="@color/colorLightOrange"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/ll_date_time_trip_details_trip_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date_trip_details_trip_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_text"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time_trip_details_trip_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="@string/time_text"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_username_seats_trip_details_trip_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_username_trip_details_trip_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/input_text_username"
                android:textSize="25dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tv_title_seats_trip_details_trip_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="end"
                android:text="@string/seats"
                android:textStyle="bold|italic"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_seats_trip_details_trip_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="2"
                android:text="@string/number"
                android:textSize="25dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_from_arrow_to_trip_details_trip_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tv_from_trip_details_trip_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/from_text"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tv_arrow_trip_details_trip_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="45dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:drawableStartCompat="@drawable/ic_baseline_arrow_forward_24" />

            <TextView
                android:id="@+id/tv_to_trip_details_trip_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to_text"
                android:textSize="25dp" />

        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:id="@+id/sv_trip_description_trip_activity"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_trip_details_trip_activity">

        <com.example.andproject.utils.MSPTextView
            android:id="@+id/tv_description_trip_activity"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginStart="45dp"
            android:background="@color/colorLightOrange"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="@string/text_description" />

    </ScrollView>

    <TextView
        android:id="@+id/tv_bookings_title_trip_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_bookedBy"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_trip_description_trip_activity"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_trip_bookings_trip_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@color/colorLightOrange"
        app:layout_constraintTop_toBottomOf="@+id/tv_bookings_title_trip_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.andproject.utils.MSPButton
        android:id="@+id/btn_create_booking_trip_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_bg"
        android:foreground="?attr/selectableItemBackground"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/button_bookTrip"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_trip_bookings_trip_activity" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemBackground="@color/wineRed"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu"
        />

</androidx.constraintlayout.widget.ConstraintLayout>