<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    android:layout_marginBottom="3dp"
    android:background="@color/customGrey"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/ll_my_bookings_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/ll_date_username_my_bookings_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date_my_bookings_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time_my_bookings_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:text="@string/time_text"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_username_my_booking_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/input_text_username"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_description_my_bookings_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/booking_description"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>